Исправлено именование секций в HTML, исправлено использование стилизации с привязкой к порядковому положению блока, рамка сделана с помощью border-bottom, удалена часть дублирующих свойств

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <main class="main">
     <section class="section section_hard_concentration">
       <h2 class="section_title">Почему сосредоточиться так сложно</h2>
-      <div class="section_list section_column">
+      <div class="section_list section_text-box-p">
         <div class="section_list-item">
           <h3 class="section_list-item_title title_decoration">
             Многозадачность
@@ -89,7 +89,7 @@
     </section>
     <section class="section section_concentration_decrease">
       <h2 class="section_title">Что снижает концентрацию внимания?</h2>
-      <div class="section_list section_row">
+      <div class="section_list section_text-box-a">
         <div class="section_list-item">
           <h3 class="section_list-item_title title_decoration">
             Многозадачность
@@ -133,7 +133,7 @@
         Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
         секунд)
       </h2>
-      <div class="section_list section_column">
+      <div class="section_list section_text-box-p">
         <h3 class="section_list-item_title title_decoration">
           5 простых (на самом деле не очень) советов
         </h3>
@@ -201,7 +201,7 @@
         </div>
       </div>
     </section>
-    <section class="section">
+    <section class="section section_picture-box">
       <h2 class="section_list-item_title title_decoration image-section-title">
         А можно в картинках?
       </h2>
